--- a/app/src/main/res/layout/char_creation_motivation.xml
+++ b/app/src/main/res/layout/char_creation_motivation.xml
@@ -26,7 +26,7 @@
 
     <Button
         android:id="@+id/random_motivation_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/random_motivation_button"
