--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#0086da</color>
     <color name="colorPrimaryDark">#005083</color>
     <color name="colorCardBG">#666464</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#14223b</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#696969</color>
