--- a/app/src/main/res/layout/char_creation_career.xml
+++ b/app/src/main/res/layout/char_creation_career.xml
@@ -2,14 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    xmlns:card_View="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <ExpandableListView
-        android:id="@+id/career_list"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="?attr/actionBarSize">
+        android:layout_margin="5sp"
+        card_View:cardElevation="10sp">
 
-    </ExpandableListView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:text="@string/career_selected"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/currentCareer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:text="@string/career_none"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        card_View:cardElevation="10sp">
+        <ExpandableListView
+            android:id="@+id/career_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="?attr/actionBarSize">
+
+        </ExpandableListView>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
