Changed main color and navigation drawer

--- a/app/src/main/res/layout/char_list.xml
+++ b/app/src/main/res/layout/char_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         card_view:cardCornerRadius="2dp"
-
+        card_view:cardElevation="5sp"
         android:layout_below="@+id/toolbar">
 
         <RelativeLayout
