--- a/app/src/main/res/layout/char_list_view.xml
+++ b/app/src/main/res/layout/char_list_view.xml
@@ -13,7 +13,7 @@
         android:id="@+id/cardList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorCardBG"
+        android:background="@color/colorPrimary"
         />
 
     <android.support.design.widget.FloatingActionButton
