--- a/app/src/main/res/layout/char_creation_career.xml
+++ b/app/src/main/res/layout/char_creation_career.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:card_View="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
