--- a/app/src/main/res/layout/char_creation_career_child_item.xml
+++ b/app/src/main/res/layout/char_creation_career_child_item.xml
@@ -9,5 +9,5 @@
         android:id="@+id/career_subtype"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"/>
+        android:paddingStart="35dp"/>
 </LinearLayout>
