--- a/app/src/main/res/layout/char_creation_career_group_item.xml
+++ b/app/src/main/res/layout/char_creation_career_group_item.xml
@@ -9,6 +9,6 @@
         android:id="@+id/career_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
+        android:paddingStart="25dp"
         android:textSize="16sp"/>
 </LinearLayout>
